[BUILD] renamed modules requiring Java 9+