@@ -3,11 +3,12 @@ plugins {
 }
 
 group 'info.picocli'
-description 'Picocli Tests Requiring Java 8 or greater'
+description 'Picocli Tests Requiring Java 9 or greater'
 version "$projectVersion"
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+// since the tests need JVM arg --add-opens, this subproject requires Java 9 or later
+sourceCompatibility = 1.9
+targetCompatibility = 1.9
 
 test {
     useJUnitPlatform()
@@ -30,12 +31,12 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Specification-Title': 'Picocli Tests Requiring Java 8 or greater',
+        attributes 'Specification-Title': 'Picocli Tests Requiring Java 9 or greater',
                 'Specification-Vendor'  : 'Remko Popma',
                 'Specification-Version' : archiveVersion.get(),
-                'Implementation-Title'  : 'Picocli Tests Requiring Java 8 or greater',
+                'Implementation-Title'  : 'Picocli Tests Requiring Java 9 or greater',
                 'Implementation-Vendor' : 'Remko Popma',
                 'Implementation-Version': archiveVersion.get(),
-                'Automatic-Module-Name' : 'info.picocli.tests.java8plus'
+                'Automatic-Module-Name' : 'info.picocli.tests.java9plus'
     }
 }
